added vision message files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,9 @@ add_message_files(
    gr_RobotReplacement.msg
    gr_Robot_Command.msg
    gr_BallReplacement.msg
+   SSL_DetectionFrame.msg
+   SSL_DetectionRobot.msg
+   SSL_DetectionBall.msg 
  )
 
 ## Generate services in the 'srv' folder
