added TacticPacket for communicating between play executor and robot node

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,7 @@ add_message_files(
    SSL_DetectionRobot.msg
    SSL_DetectionBall.msg
    BeliefState.msg
+   TacticPacket.msg
  )
 
 ## Generate services in the 'srv' folder
