--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,14 +61,16 @@ add_message_files(
    sslDebug_Line.msg
    sslDebug_Circle.msg
    sslDebug_Data.msg
+   team_info.msg
+   point_2d.msg
+   obstacle.msg
  )
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
+add_service_files(
+  FILES
+  path_data.srv
+)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
